--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'java'
 
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
@@ -16,4 +17,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //External dependencies
+    compile('org.springframework.boot:spring-boot-starter-web')
+    //Test dependencies
+    testCompile ('junit:junit:4.12')
 }
