--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     //Test dependencies
     testCompile ('junit:junit:4.12')
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
