--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -2,9 +2,10 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'java'
+
 group 'com.kodilla'
 version '0.0.1-SNAPSHOT'
-
 sourceCompatibility = 1.8
 
 repositories {
@@ -13,4 +14,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
