--- a/kodilla-stream/build.gradle
+++ b/kodilla-stream/build.gradle
@@ -13,4 +13,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
