--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,6 @@ include 'kodilla-good-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-patterns'
+include 'kodilla-sql'
+include 'kodilla-sql'
 
