--- a/kodilla-sudoku/build.gradle
+++ b/kodilla-sudoku/build.gradle
@@ -12,8 +12,8 @@ repositories {
 }
 
 dependencies {
-    compile ('org.projectlombok:lombok')
-    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor('org.projectlombok:lombok:1.18.8')
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
